add supermq docker
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -64,127 +64,16 @@ AM_OPENBAO_ROOT_TOKEN=
 ## Jaeger
 AM_JAEGER_PORT=6831
 AM_JAEGER_FRONTEND=16686
-AM_JAEGER_URL=http://jaeger:4318
+AM_JAEGER_URL=http://jaeger:4318/v1/traces
 AM_JAEGER_TRACE_RATIO=1.0
 AM_JAEGER_COLLECTOR_OTLP_ENABLED=true
 AM_JAEGER_OLTP_HTTP_PORT=4318
 AM_JAEGER_MEMORY_MAX_TRACES=5000
-AM_JAEGER_TRACE_RATIO=1.0
-
-### Auth
-SMQ_AUTH_LOG_LEVEL=debug
-SMQ_AUTH_HTTP_HOST=auth
-SMQ_AUTH_HTTP_PORT=9001
-SMQ_AUTH_HTTP_SERVER_CERT=
-SMQ_AUTH_HTTP_SERVER_KEY=
-SMQ_AUTH_GRPC_HOST=auth
-SMQ_AUTH_GRPC_PORT=7001
-SMQ_AUTH_GRPC_SERVER_CERT=${GRPC_MTLS:+./ssl/certs/auth-grpc-server.crt}${GRPC_TLS:+./ssl/certs/auth-grpc-server.crt}
-SMQ_AUTH_GRPC_SERVER_KEY=${GRPC_MTLS:+./ssl/certs/auth-grpc-server.key}${GRPC_TLS:+./ssl/certs/auth-grpc-server.key}
-SMQ_AUTH_GRPC_SERVER_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}${GRPC_TLS:+./ssl/certs/ca.crt}
-SMQ_AUTH_DB_HOST=auth-db
-SMQ_AUTH_DB_PORT=5432
-SMQ_AUTH_DB_USER=supermq
-SMQ_AUTH_DB_PASS=supermq
-SMQ_AUTH_DB_NAME=auth
-SMQ_AUTH_DB_SSL_MODE=disable
-SMQ_AUTH_DB_SSL_CERT=
-SMQ_AUTH_DB_SSL_KEY=
-SMQ_AUTH_DB_SSL_ROOT_CERT=
-SMQ_AUTH_SECRET_KEY=HyE2D4RUt9nnKG6v8zKEqAp6g6ka8hhZsqUpzgKvnwpXrNVQSH
-SMQ_AUTH_ACCESS_TOKEN_DURATION="1h"
-SMQ_AUTH_REFRESH_TOKEN_DURATION="24h"
-SMQ_AUTH_INVITATION_DURATION="168h"
-SMQ_AUTH_ADAPTER_INSTANCE_ID=
-SMQ_AUTH_CACHE_URL=redis://auth-redis:${SMQ_REDIS_TCP_PORT}/0
-SMQ_AUTH_CACHE_KEY_DURATION=10m
 
 #### Auth Client Config
-SMQ_AUTH_URL=auth:9001
-SMQ_AUTH_GRPC_URL=auth:7001
-SMQ_AUTH_GRPC_TIMEOUT=300s
-SMQ_AUTH_GRPC_CLIENT_CERT=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.crt}
-SMQ_AUTH_GRPC_CLIENT_KEY=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.key}
-SMQ_AUTH_GRPC_CLIENT_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
-
-### Domains
-SMQ_DOMAINS_LOG_LEVEL=debug
-SMQ_DOMAINS_HTTP_HOST=domains
-SMQ_DOMAINS_HTTP_PORT=9003
-SMQ_DOMAINS_HTTP_SERVER_KEY=
-SMQ_DOMAINS_HTTP_SERVER_CERT=
-SMQ_DOMAINS_GRPC_HOST=domains
-SMQ_DOMAINS_GRPC_PORT=7003
-SMQ_DOMAINS_GRPC_SERVER_CERT=${GRPC_MTLS:+./ssl/certs/domains-grpc-server.crt}${GRPC_TLS:+./ssl/certs/domains-grpc-server.crt}
-SMQ_DOMAINS_GRPC_SERVER_KEY=${GRPC_MTLS:+./ssl/certs/domains-grpc-server.key}${GRPC_TLS:+./ssl/certs/domains-grpc-server.key}
-SMQ_DOMAINS_GRPC_SERVER_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}${GRPC_TLS:+./ssl/certs/ca.crt}
-SMQ_DOMAINS_DB_HOST=domains-db
-SMQ_DOMAINS_DB_PORT=5432
-SMQ_DOMAINS_DB_NAME=domains
-SMQ_DOMAINS_DB_USER=supermq
-SMQ_DOMAINS_DB_PASS=supermq
-SMQ_DOMAINS_DB_SSL_MODE=
-SMQ_DOMAINS_DB_SSL_KEY=
-SMQ_DOMAINS_DB_SSL_CERT=
-SMQ_DOMAINS_DB_SSL_ROOT_CERT=
-SMQ_DOMAINS_INSTANCE_ID=
-SMQ_DOMAINS_CACHE_URL=redis://domains-redis:${SMQ_REDIS_TCP_PORT}/0
-SMQ_DOMAINS_CACHE_KEY_DURATION=10m
-
-### Users
-SMQ_USERS_LOG_LEVEL=debug
-SMQ_USERS_SECRET_KEY=HyE2D4RUt9nnKG6v8zKEqAp6g6ka8hhZsqUpzgKvnwpXrNVQSH
-SMQ_USERS_ADMIN_EMAIL=admin@example.com
-SMQ_USERS_ADMIN_PASSWORD=12345678
-SMQ_USERS_ADMIN_USERNAME=admin
-SMQ_USERS_ADMIN_FIRST_NAME=super
-SMQ_USERS_ADMIN_LAST_NAME=admin
-SMQ_USERS_PASS_REGEX=^.{8,}$
-SMQ_USERS_ACCESS_TOKEN_DURATION=15m
-SMQ_USERS_REFRESH_TOKEN_DURATION=24h
-SMQ_USERS_HTTP_HOST=users
-SMQ_USERS_HTTP_PORT=9002
-SMQ_USERS_HTTP_SERVER_CERT=
-SMQ_USERS_HTTP_SERVER_KEY=
-SMQ_USERS_DB_HOST=users-db
-SMQ_USERS_DB_PORT=5432
-SMQ_USERS_DB_USER=supermq
-SMQ_USERS_DB_PASS=supermq
-SMQ_USERS_DB_NAME=users
-SMQ_USERS_DB_SSL_MODE=disable
-SMQ_USERS_DB_SSL_CERT=
-SMQ_USERS_DB_SSL_KEY=
-SMQ_USERS_DB_SSL_ROOT_CERT=
-SMQ_USERS_RESET_PWD_TEMPLATE=users.tmpl
-SMQ_USERS_INSTANCE_ID=
-SMQ_USERS_SECRET_KEY=HyE2D4RUt9nnKG6v8zKEqAp6g6ka8hhZsqUpzgKvnwpXrNVQSH
-SMQ_USERS_ADMIN_EMAIL=admin@example.com
-SMQ_USERS_ADMIN_PASSWORD=12345678
-SMQ_USERS_PASS_REGEX=^.{8,}$
-SMQ_USERS_ACCESS_TOKEN_DURATION=15m
-SMQ_USERS_REFRESH_TOKEN_DURATION=24h
-SMQ_USERS_ALLOW_SELF_REGISTER=true
-SMQ_OAUTH_UI_REDIRECT_URL=http://localhost:9095${SMQ_UI_PATH_PREFIX}/tokens/secure
-SMQ_OAUTH_UI_ERROR_URL=http://localhost:9095${SMQ_UI_PATH_PREFIX}/error
-SMQ_USERS_DELETE_INTERVAL=24h
-SMQ_USERS_DELETE_AFTER=720h
-SMQ_PASSWORD_RESET_URL_PREFIX=http://localhost:9001
-
-#### Users Client Config
-SMQ_USERS_URL=users:9002
-
-### SpiceDB Datastore config
-SMQ_SPICEDB_DB_USER=supermq
-SMQ_SPICEDB_DB_PASS=supermq
-SMQ_SPICEDB_DB_NAME=spicedb
-SMQ_SPICEDB_DB_PORT=5432
-
-### SpiceDB config
-SMQ_SPICEDB_PRE_SHARED_KEY="12345678"
-SMQ_SPICEDB_SCHEMA_FILE="/schema.zed"
-SMQ_SPICEDB_HOST=supermq-spicedb
-SMQ_SPICEDB_PORT=50051
-SMQ_SPICEDB_DATASTORE_ENGINE=postgres
-
-# Docker image tag
-SMQ_RELEASE_TAG=latest
+AM_AUTH_URL=auth:9001
+AM_AUTH_GRPC_URL=auth:7001
+AM_AUTH_GRPC_TIMEOUT=300s
+AM_AUTH_GRPC_CLIENT_CERT=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.crt}
+AM_AUTH_GRPC_CLIENT_KEY=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.key}
+AM_AUTH_GRPC_CLIENT_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
