add repo for storing entity ids
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -4,6 +4,16 @@
 
 ## CERTS
 AM_CERTS_LOG_LEVEL=debug
+AM_CERTS_DB_HOST=certs-db
+AM_CERTS_DB_PORT=5432
+AM_CERTS_DB_USER=absmach
+AM_CERTS_DB_PASS=absmach
+AM_CERTS_DB=certs
+AM_CERTS_DB_SSL_MODE=disable
+AM_CERTS_DB_SSL_CERT=
+AM_CERTS_DB_SSL_KEY=
+AM_CERTS_DB_SSL_ROOT_CERT=
+AM_CERTS_DB_MAX_CONNECTIONS=100
 AM_CERTS_HTTP_HOST=certs
 AM_CERTS_HTTP_PORT=9010
 AM_CERTS_HTTP_SERVER_CERT=
