fix issue return value
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
       - openbao
       - certs-db
-    restart: on-failure
+    restart: always
     networks:
       - certs-base-net
     environment:
