update entrypoint file
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -52,6 +52,14 @@ AM_OPENBAO_PKI_CA_ST=PARIS
 AM_OPENBAO_PKI_CA_ADDR=5 Av. Anatole
 AM_OPENBAO_PKI_CA_PO=75007
 AM_OPENBAO_PKI_ROLE_NAME=absmach
+AM_OPENBAO_PKI_CA_DNS_NAMES=localhost
+AM_OPENBAO_PKI_CA_IP_ADDRESSES=127.0.0.1,::1
+AM_OPENBAO_PKI_CA_URI_SANS=
+AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES=
+AM_OPENBAO_UNSEAL_KEY_1=
+AM_OPENBAO_UNSEAL_KEY_2=
+AM_OPENBAO_UNSEAL_KEY_3=
+AM_OPENBAO_ROOT_TOKEN=
 
 ## Jaeger
 AM_JAEGER_PORT=6831
