--- a/docker/.env
+++ b/docker/.env
@@ -44,7 +44,7 @@ AM_CERTS_OPENBAO_PKI_PATH=pki
 AM_CERTS_OPENBAO_ROLE=absmach
 
 ## OpenBao Server
-AM_OPENBAO_PKI_CA_CN=Abstract Machines Root Certificate Authority
+AM_OPENBAO_PKI_CA_CN=Abstract Machines Certificate Authority
 AM_OPENBAO_PKI_CA_OU=Abstract Machines
 AM_OPENBAO_PKI_CA_O=AbstractMacines
 AM_OPENBAO_PKI_CA_C=FRANCE
