remove unused code
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -46,7 +46,7 @@ AM_CERTS_OPENBAO_ROLE=absmach
 ## OpenBao Server
 AM_OPENBAO_PKI_CA_CN=Abstract Machines Root Certificate Authority
 AM_OPENBAO_PKI_CA_OU=Abstract Machines
-AM_OPENBAO_PKI_CA_O=Abstract Machines
+AM_OPENBAO_PKI_CA_O=AbstractMacines
 AM_OPENBAO_PKI_CA_C=FRANCE
 AM_OPENBAO_PKI_CA_L=PARIS
 AM_OPENBAO_PKI_CA_ST=PARIS
@@ -56,7 +56,7 @@ AM_OPENBAO_PKI_ROLE_NAME=absmach
 AM_OPENBAO_PKI_CA_DNS_NAMES=localhost
 AM_OPENBAO_PKI_CA_IP_ADDRESSES=127.0.0.1,::1
 AM_OPENBAO_PKI_CA_URI_SANS=
-AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES=
+AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES=info@abstractmachines.rs
 AM_OPENBAO_UNSEAL_KEY_1=
 AM_OPENBAO_UNSEAL_KEY_2=
 AM_OPENBAO_UNSEAL_KEY_3=
