--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,3 +1,6 @@
+# Copyright (c) Abstract Machines
+# SPDX-License-Identifier: Apache-2.0
+
 FROM scratch
 ARG SVC
 COPY --from=alpine:latest /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
