AMCERTS-155 - Add `auth` to certs (#156)
* initial implementation

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update libraries

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update go.mod and go.sum

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update docker compose

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* add auth in endpoints

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove spicedb file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* add supermq docker

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update supermq compose

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update sdk and its tests

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove unused code

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove debug logs

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update tests

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update mock file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix tests

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove comment

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* add issuerfromcsrInternal

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* address comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove unused code

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix generated files

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix tests

Signed-of

--- a/docker/.env
+++ b/docker/.env
@@ -33,6 +33,7 @@ AM_CERTS_GRPC_CLIENT_TLS=
 AM_CERTS_GRPC_CA_CERTS=
 AM_CERTS_INSTANCE_ID=
 AM_CERTS_RELEASE_TAG=latest
+AM_CERTS_TOKEN=
 
 ## OpenBao PKI
 AM_CERTS_OPENBAO_HOST=http://certs-openbao:8200
@@ -45,7 +46,7 @@ AM_CERTS_OPENBAO_ROLE=absmach
 ## OpenBao Server
 AM_OPENBAO_PKI_CA_CN=Abstract Machines Root Certificate Authority
 AM_OPENBAO_PKI_CA_OU=Abstract Machines
-AM_OPENBAO_PKI_CA_O=Abstract Machines
+AM_OPENBAO_PKI_CA_O=AbstractMacines
 AM_OPENBAO_PKI_CA_C=FRANCE
 AM_OPENBAO_PKI_CA_L=PARIS
 AM_OPENBAO_PKI_CA_ST=PARIS
@@ -55,7 +56,7 @@ AM_OPENBAO_PKI_ROLE_NAME=absmach
 AM_OPENBAO_PKI_CA_DNS_NAMES=localhost
 AM_OPENBAO_PKI_CA_IP_ADDRESSES=127.0.0.1,::1
 AM_OPENBAO_PKI_CA_URI_SANS=
-AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES=
+AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES=info@abstractmachines.rs
 AM_OPENBAO_UNSEAL_KEY_1=
 AM_OPENBAO_UNSEAL_KEY_2=
 AM_OPENBAO_UNSEAL_KEY_3=
@@ -64,9 +65,24 @@ AM_OPENBAO_ROOT_TOKEN=
 ## Jaeger
 AM_JAEGER_PORT=6831
 AM_JAEGER_FRONTEND=16686
-AM_JAEGER_URL=http://jaeger:4318
+AM_JAEGER_URL=http://jaeger:4318/v1/traces
 AM_JAEGER_TRACE_RATIO=1.0
 AM_JAEGER_COLLECTOR_OTLP_ENABLED=true
 AM_JAEGER_OLTP_HTTP_PORT=4318
 AM_JAEGER_MEMORY_MAX_TRACES=5000
-AM_JAEGER_TRACE_RATIO=1.0
+
+#### Auth Client Config
+AM_AUTH_URL=auth:9001
+AM_AUTH_GRPC_URL=auth:7001
+AM_AUTH_GRPC_TIMEOUT=300s
+AM_AUTH_GRPC_CLIENT_CERT=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.crt}
+AM_AUTH_GRPC_CLIENT_KEY=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.key}
+AM_AUTH_GRPC_CLIENT_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
+
+#### Domains Client Config
+AM_DOMAINS_URL=domains:9003
+AM_DOMAINS_GRPC_URL=domains:7003
+AM_DOMAINS_GRPC_TIMEOUT=300s
+AM_DOMAINS_GRPC_CLIENT_CERT=${GRPC_MTLS:+./ssl/certs/domains-grpc-client.crt}
+AM_DOMAINS_GRPC_CLIENT_KEY=${GRPC_MTLS:+./ssl/certs/domains-grpc-client.key}
+AM_DOMAINS_GRPC_CLIENT_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
