--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,6 +3,14 @@
 
 name: "certs"
 
+include:
+  - path:
+      - ./supermq-docker/docker-compose.yaml
+      - ./supermq-docker-compose.override.yaml
+    project_directory: ./supermq-docker
+    env_file:
+      - ./supermq-docker/.env
+
 networks:
   certs-base-net:
     driver: bridge
