--- a/docker/.env
+++ b/docker/.env
@@ -78,6 +78,7 @@ AM_AUTH_GRPC_TIMEOUT=300s
 AM_AUTH_GRPC_CLIENT_CERT=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.crt}
 AM_AUTH_GRPC_CLIENT_KEY=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.key}
 AM_AUTH_GRPC_CLIENT_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
+AM_AUTH_GRPC_SERVER_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
 
 #### Domains Client Config
 AM_DOMAINS_URL=domains:9003
