NOISSUE - Add intermediate certificates (#161)
* fix entrypoint configuration

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update SANs

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* smq test

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* address comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix get ca

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove method in cli

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* removed unused code

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove docker compose lines

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove white space

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* address comment

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* rename yml to yaml

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update go mod file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* rename token to secret

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* test certs

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* address comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove recursion

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove auth in view-ca

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* remove auth from download ca

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* test

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* rename method

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

---------

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -33,7 +33,7 @@ AM_CERTS_GRPC_CLIENT_TLS=
 AM_CERTS_GRPC_CA_CERTS=
 AM_CERTS_INSTANCE_ID=
 AM_CERTS_RELEASE_TAG=latest
-AM_CERTS_TOKEN=
+AM_CERTS_SECRET=12345678
 
 ## OpenBao PKI
 AM_CERTS_OPENBAO_HOST=http://certs-openbao:8200
@@ -44,7 +44,7 @@ AM_CERTS_OPENBAO_PKI_PATH=pki
 AM_CERTS_OPENBAO_ROLE=absmach
 
 ## OpenBao Server
-AM_OPENBAO_PKI_CA_CN=Abstract Machines Root Certificate Authority
+AM_OPENBAO_PKI_CA_CN=Abstract Machines Certificate Authority
 AM_OPENBAO_PKI_CA_OU=Abstract Machines
 AM_OPENBAO_PKI_CA_O=AbstractMacines
 AM_OPENBAO_PKI_CA_C=FRANCE
@@ -78,6 +78,7 @@ AM_AUTH_GRPC_TIMEOUT=300s
 AM_AUTH_GRPC_CLIENT_CERT=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.crt}
 AM_AUTH_GRPC_CLIENT_KEY=${GRPC_MTLS:+./ssl/certs/auth-grpc-client.key}
 AM_AUTH_GRPC_CLIENT_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
+AM_AUTH_GRPC_SERVER_CA_CERTS=${GRPC_MTLS:+./ssl/certs/ca.crt}
 
 #### Domains Client Config
 AM_DOMAINS_URL=domains:9003
