fix entrypoint file
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -35,32 +35,30 @@ AM_CERTS_INSTANCE_ID=
 AM_CERTS_RELEASE_TAG=latest
 AM_CERTS_SECRET=12345678
 
-## OpenBao PKI
+## OpenBao PKI Config
 AM_CERTS_OPENBAO_HOST=http://certs-openbao:8200
 AM_CERTS_OPENBAO_APP_ROLE=absmach
 AM_CERTS_OPENBAO_APP_SECRET=absmach
+AM_CERTS_OPENBAO_SECRET_ID_TTL=87600h
 AM_CERTS_OPENBAO_NAMESPACE=
 AM_CERTS_OPENBAO_PKI_PATH=pki
 AM_CERTS_OPENBAO_ROLE=absmach
-
-## OpenBao Server
-AM_OPENBAO_PKI_CA_CN=Abstract Machines Certificate Authority
-AM_OPENBAO_PKI_CA_OU=Abstract Machines
-AM_OPENBAO_PKI_CA_O=AbstractMacines
-AM_OPENBAO_PKI_CA_C=FRANCE
-AM_OPENBAO_PKI_CA_L=PARIS
-AM_OPENBAO_PKI_CA_ST=PARIS
-AM_OPENBAO_PKI_CA_ADDR=5 Av. Anatole
-AM_OPENBAO_PKI_CA_PO=75007
-AM_OPENBAO_PKI_ROLE_NAME=absmach
-AM_OPENBAO_PKI_CA_DNS_NAMES=localhost
-AM_OPENBAO_PKI_CA_IP_ADDRESSES=127.0.0.1,::1
-AM_OPENBAO_PKI_CA_URI_SANS=
-AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES=info@abstractmachines.rs
-AM_OPENBAO_UNSEAL_KEY_1=
-AM_OPENBAO_UNSEAL_KEY_2=
-AM_OPENBAO_UNSEAL_KEY_3=
-AM_OPENBAO_ROOT_TOKEN=
+AM_CERTS_OPENBAO_PKI_CA_CN=Abstract Machines Certificate Authority
+AM_CERTS_OPENBAO_PKI_CA_OU=Abstract Machines
+AM_CERTS_OPENBAO_PKI_CA_O=AbstractMacines
+AM_CERTS_OPENBAO_PKI_CA_C=FRANCE
+AM_CERTS_OPENBAO_PKI_CA_L=PARIS
+AM_CERTS_OPENBAO_PKI_CA_ST=PARIS
+AM_CERTS_OPENBAO_PKI_CA_ADDR=5 Av. Anatole
+AM_CERTS_OPENBAO_PKI_CA_PO=75007
+AM_CERTS_OPENBAO_PKI_CA_DNS_NAMES=localhost
+AM_CERTS_OPENBAO_PKI_CA_IP_ADDRESSES=127.0.0.1,::1
+AM_CERTS_OPENBAO_PKI_CA_URI_SANS=
+AM_CERTS_OPENBAO_PKI_CA_EMAIL_ADDRESSES=info@abstractmachines.rs
+AM_CERTS_OPENBAO_UNSEAL_KEY_1=
+AM_CERTS_OPENBAO_UNSEAL_KEY_2=
+AM_CERTS_OPENBAO_UNSEAL_KEY_3=
+AM_CERTS_OPENBAO_ROOT_TOKEN=
 
 ## Jaeger
 AM_JAEGER_PORT=6831
