--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -83,26 +83,27 @@ services:
     environment:
       - BAO_ADDR=http://127.0.0.1:8200
       - BAO_LOG_LEVEL=info
-      - AM_OPENBAO_PKI_ROLE=${AM_CERTS_OPENBAO_ROLE}
-      - AM_OPENBAO_APP_ROLE=${AM_CERTS_OPENBAO_APP_ROLE}
-      - AM_OPENBAO_APP_SECRET=${AM_CERTS_OPENBAO_APP_SECRET}
-      - AM_OPENBAO_NAMESPACE=${AM_CERTS_OPENBAO_NAMESPACE}
-      - AM_OPENBAO_PKI_CA_CN=${AM_OPENBAO_PKI_CA_CN}
-      - AM_OPENBAO_PKI_CA_OU=${AM_OPENBAO_PKI_CA_OU}
-      - AM_OPENBAO_PKI_CA_O=${AM_OPENBAO_PKI_CA_O}
-      - AM_OPENBAO_PKI_CA_C=${AM_OPENBAO_PKI_CA_C}
-      - AM_OPENBAO_PKI_CA_L=${AM_OPENBAO_PKI_CA_L}
-      - AM_OPENBAO_PKI_CA_ST=${AM_OPENBAO_PKI_CA_ST}
-      - AM_OPENBAO_PKI_CA_ADDR=${AM_OPENBAO_PKI_CA_ADDR}
-      - AM_OPENBAO_PKI_CA_PO=${AM_OPENBAO_PKI_CA_PO}
-      - AM_OPENBAO_PKI_CA_DNS_NAMES=${AM_OPENBAO_PKI_CA_DNS_NAMES}
-      - AM_OPENBAO_PKI_CA_IP_ADDRESSES=${AM_OPENBAO_PKI_CA_IP_ADDRESSES}
-      - AM_OPENBAO_PKI_CA_URI_SANS=${AM_OPENBAO_PKI_CA_URI_SANS}
-      - AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES=${AM_OPENBAO_PKI_CA_EMAIL_ADDRESSES}
-      - AM_OPENBAO_UNSEAL_KEY_1=${AM_OPENBAO_UNSEAL_KEY_1}
-      - AM_OPENBAO_UNSEAL_KEY_2=${AM_OPENBAO_UNSEAL_KEY_2}
-      - AM_OPENBAO_UNSEAL_KEY_3=${AM_OPENBAO_UNSEAL_KEY_3}
-      - AM_OPENBAO_ROOT_TOKEN=${AM_OPENBAO_ROOT_TOKEN}
+      - AM_CERTS_OPENBAO_PKI_ROLE=${AM_CERTS_OPENBAO_ROLE}
+      - AM_CERTS_OPENBAO_APP_ROLE=${AM_CERTS_OPENBAO_APP_ROLE}
+      - AM_CERTS_OPENBAO_APP_SECRET=${AM_CERTS_OPENBAO_APP_SECRET}
+      - AM_CERTS_OPENBAO_SECRET_ID_TTL=${AM_CERTS_OPENBAO_SECRET_ID_TTL}
+      - AM_CERTS_OPENBAO_NAMESPACE=${AM_CERTS_OPENBAO_NAMESPACE}
+      - AM_CERTS_OPENBAO_PKI_CA_CN=${AM_CERTS_OPENBAO_PKI_CA_CN}
+      - AM_CERTS_OPENBAO_PKI_CA_OU=${AM_CERTS_OPENBAO_PKI_CA_OU}
+      - AM_CERTS_OPENBAO_PKI_CA_O=${AM_CERTS_OPENBAO_PKI_CA_O}
+      - AM_CERTS_OPENBAO_PKI_CA_C=${AM_CERTS_OPENBAO_PKI_CA_C}
+      - AM_CERTS_OPENBAO_PKI_CA_L=${AM_CERTS_OPENBAO_PKI_CA_L}
+      - AM_CERTS_OPENBAO_PKI_CA_ST=${AM_CERTS_OPENBAO_PKI_CA_ST}
+      - AM_CERTS_OPENBAO_PKI_CA_ADDR=${AM_CERTS_OPENBAO_PKI_CA_ADDR}
+      - AM_CERTS_OPENBAO_PKI_CA_PO=${AM_CERTS_OPENBAO_PKI_CA_PO}
+      - AM_CERTS_OPENBAO_PKI_CA_DNS_NAMES=${AM_CERTS_OPENBAO_PKI_CA_DNS_NAMES}
+      - AM_CERTS_OPENBAO_PKI_CA_IP_ADDRESSES=${AM_CERTS_OPENBAO_PKI_CA_IP_ADDRESSES}
+      - AM_CERTS_OPENBAO_PKI_CA_URI_SANS=${AM_CERTS_OPENBAO_PKI_CA_URI_SANS}
+      - AM_CERTS_OPENBAO_PKI_CA_EMAIL_ADDRESSES=${AM_CERTS_OPENBAO_PKI_CA_EMAIL_ADDRESSES}
+      - AM_CERTS_OPENBAO_UNSEAL_KEY_1=${AM_CERTS_OPENBAO_UNSEAL_KEY_1}
+      - AM_CERTS_OPENBAO_UNSEAL_KEY_2=${AM_CERTS_OPENBAO_UNSEAL_KEY_2}
+      - AM_CERTS_OPENBAO_UNSEAL_KEY_3=${AM_CERTS_OPENBAO_UNSEAL_KEY_3}
+      - AM_CERTS_OPENBAO_ROOT_TOKEN=${AM_CERTS_OPENBAO_ROOT_TOKEN}
     cap_add:
       - IPC_LOCK
     mem_swappiness: 0
