--- a/docker/.env
+++ b/docker/.env
@@ -14,11 +14,11 @@ AM_CERTS_DB_SSL_CERT=
 AM_CERTS_DB_SSL_KEY=
 AM_CERTS_DB_SSL_ROOT_CERT=
 AM_CERTS_DB_MAX_CONNECTIONS=100
-AM_CERTS_HTTP_HOST=certs
+AM_CERTS_HTTP_HOST=0.0.0.0
 AM_CERTS_HTTP_PORT=9010
 AM_CERTS_HTTP_SERVER_CERT=
 AM_CERTS_HTTP_SERVER_KEY=
-AM_CERTS_GRPC_HOST=certs
+AM_CERTS_GRPC_HOST=0.0.0.0
 AM_CERTS_GRPC_PORT=7012
 AM_CERTS_GRPC_SERVER_CERT=
 AM_CERTS_GRPC_SERVER_KEY=
@@ -41,10 +41,13 @@ AM_CERTS_SECRET=12345678
 AM_CERTS_OPENBAO_HOST=http://certs-openbao:8200
 AM_CERTS_OPENBAO_APP_ROLE=absmach
 AM_CERTS_OPENBAO_APP_SECRET=absmach
-AM_CERTS_OPENBAO_SECRET_ID_TTL=87600h
+AM_CERTS_OPENBAO_SECRET_ID_TTL=720h
 AM_CERTS_OPENBAO_NAMESPACE=
 AM_CERTS_OPENBAO_PKI_PATH=pki
 AM_CERTS_OPENBAO_ROLE=absmach
+AM_CERTS_SERVICE_TOKEN_PATH=/openbao/service_token
+AM_CERTS_SECRET_REFRESH_BUFFER=24h
+AM_CERTS_SECRET_CHECK_INTERVAL=1h
 AM_CERTS_OPENBAO_PKI_CA_CN=Abstract Machines Certificate Authority
 AM_CERTS_OPENBAO_PKI_CA_OU=Abstract Machines
 AM_CERTS_OPENBAO_PKI_CA_O=AbstractMachines
