fix failing linter
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -46,6 +46,7 @@ AM_CERTS_OPENBAO_NAMESPACE=
 AM_CERTS_OPENBAO_PKI_PATH=pki
 AM_CERTS_OPENBAO_ROLE=absmach
 AM_CERTS_SERVICE_TOKEN_PATH=/openbao/service_token
+AM_CERTS_SECRET_ID_PATH=/openbao/secret_id
 AM_CERTS_SECRET_REFRESH_BUFFER=24h
 AM_CERTS_SECRET_CHECK_INTERVAL=1h
 AM_CERTS_OPENBAO_PKI_CA_CN=Abstract Machines Certificate Authority
