--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -56,6 +56,7 @@ services:
       AM_DOMAINS_GRPC_SERVER_CA_CERTS: ${AM_DOMAINS_GRPC_SERVER_CA_CERTS:+/domains-grpc-server-ca.crt}
       AM_CERTS_SECRET: ${AM_CERTS_SECRET}
       AM_CERTS_SERVICE_TOKEN_PATH: ${AM_CERTS_SERVICE_TOKEN_PATH}
+      AM_CERTS_SECRET_ID_PATH: ${AM_CERTS_SECRET_ID_PATH}
       AM_CERTS_SECRET_REFRESH_BUFFER: ${AM_CERTS_SECRET_REFRESH_BUFFER}
       AM_CERTS_SECRET_CHECK_INTERVAL: ${AM_CERTS_SECRET_CHECK_INTERVAL}
     ports:
