--- a/docker/.env
+++ b/docker/.env
@@ -14,11 +14,11 @@ AM_CERTS_DB_SSL_CERT=
 AM_CERTS_DB_SSL_KEY=
 AM_CERTS_DB_SSL_ROOT_CERT=
 AM_CERTS_DB_MAX_CONNECTIONS=100
-AM_CERTS_HTTP_HOST=0.0.0.0
+AM_CERTS_HTTP_HOST=certs
 AM_CERTS_HTTP_PORT=9010
 AM_CERTS_HTTP_SERVER_CERT=
 AM_CERTS_HTTP_SERVER_KEY=
-AM_CERTS_GRPC_HOST=0.0.0.0
+AM_CERTS_GRPC_HOST=certs
 AM_CERTS_GRPC_PORT=7012
 AM_CERTS_GRPC_SERVER_CERT=
 AM_CERTS_GRPC_SERVER_KEY=
