--- a/docker/.env
+++ b/docker/.env
@@ -42,7 +42,7 @@ AM_CERTS_OPENBAO_HOST=http://certs-openbao:8200
 AM_CERTS_OPENBAO_APP_ROLE=absmach
 AM_CERTS_OPENBAO_APP_SECRET=absmach
 AM_CERTS_OPENBAO_SECRET_ID_TTL=720h
-AM_CERTS_OPENBAO_NAMESPACE=
+AM_CERTS_OPENBAO_NAMESPACE=startup
 AM_CERTS_OPENBAO_PKI_PATH=pki
 AM_CERTS_OPENBAO_ROLE=absmach
 AM_CERTS_SERVICE_TOKEN_PATH=/openbao/service_token
@@ -65,6 +65,11 @@ AM_CERTS_OPENBAO_UNSEAL_KEY_1=
 AM_CERTS_OPENBAO_UNSEAL_KEY_2=
 AM_CERTS_OPENBAO_UNSEAL_KEY_3=
 AM_CERTS_OPENBAO_ROOT_TOKEN=
+
+##Redis
+AM_BASE_STREAM=events.supermq.>
+AM_ES_URL=nats://nats:4222
+AM_CERTS_ES_CONSUMER=certs
 
 ## Jaeger
 AM_JAEGER_PORT=6831
